# suri

./: .env.example  .gitignore  Procfile  README.md  docker-compose.yml  e2e_test.py  pyproject.toml  railway.toml
app/: streamlit_app.py
app/agents/: base.py  cache.py  critic.py  executor.py  orchestrator.py  planner.py  prompts.py  prompts.py.bak
app/mcp_server/: db.py  domain_glossary.yaml  guards.py  server.py
app/ui/: data_sample_tab.py  glossary_tab.py  page_admin.py  page_agent.py  presets.py  rendering.py  schema_tab.py
data/schema/: 001_init.sql  002_pii.sql
data/seed/: anomalies.py  checks.py  config.py  generators.py  load.py
docs/: env-setup.md  future-work.md  golden-set-v1.md.bak  golden-set.md  known-limitations.md  seed-plan.md  suri-project-knowledge.md
docs/adr/: ADR-001-tech-stack.md  ADR-002-mcp-library.md  ADR-003-agent-framework.md  ADR-004-domain-glossary.md  ADR-005-railway-deployment.md
docs/assets/d8/: pii-governance-verification.txt
docs/interview-prep/: design-decisions.md  interview-answers.md  qa-extended.md
docs/research/: haiku-migration-test.md
docs/research/agent-framework/: 00-round1-summary.md  00-round2-summary.md
docs/research/dataset/: SURI PoC 데이터셋·스키마·이상 패턴 조사 보고서.md
docs/research/mcp-library/: 01-chatgpt.md  02-gemini.md  03-claude.md  04-perplexity.md
docs/research/seed-design/: 01-chatgpt.md  02-gemini.md  03-claude.md  04-perplexity.md
scripts/: railway_bootstrap.py  run_golden_set.py  test_agent_exploration.py  test_multiturn.py  test_new_tools.py
